//
// Created by Novin##### on 5/1/2025.
//

#ifndef CIRCUIT_H
#define CIRCUIT_H



class Circuit {

};



#endif //CIRCUIT_H
