//
// Created by Novin##### on 5/1/2025.
//

#ifndef CAPACITOR_H
#define CAPACITOR_H



class Capacitor {

};



#endif //CAPACITOR_H
