//
// Created by Novin##### on 5/1/2025.
//

#ifndef INDUCTOR_H
#define INDUCTOR_H



class Inductor {

};



#endif //INDUCTOR_H
