//
// Created by Novin##### on 5/1/2025.
//

#ifndef RESISTOR_H
#define RESISTOR_H



class Resistor {

};



#endif //RESISTOR_H
