//
// Created by Novin##### on 5/1/2025.
//

#ifndef ELEMENT_H
#define ELEMENT_H



class Element {

};



#endif //ELEMENT_H
