//
// Created by Novin##### on 5/1/2025.
//

#ifndef NODE_H
#define NODE_H



class Node {

};



#endif //NODE_H
